--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -178,5 +178,77 @@ Localization
 		//		ROC-ApolloASTPVHFBDB
 		#rocApolloASTPVHFBDBTitle = Apollo-Soyuz Test Project VHF-FM Antenna
 		#rocApolloASTPVHFBDBDesc = A small, fixed VHF-FM whip antenna for the Apollo-Soyuz Test Project Docking Module.
+		
+		//	============================================================================
+		//	BDB Gemini
+		//	============================================================================
+		//		ROC-GeminiAntennaBDB
+		#rocGeminiAntennaBDBTitle = Gemini UHF Whip Antenna
+		#rocGeminiAntennaBDBDesc = A small extending antenna used for maintaining communications between the Gemini spacecraft and the ground. Attaches to the equipment section
+		//	============================================================================
+		//		ROC-GeminiCMBDB
+		#rocGeminiCMBDBTitle = Gemini Cabin
+		#rocGeminiCMBDBDesc = The Gemini cabin. Contains two astronauts. When equipped with fuel cells and combined with its service module, it is capable of complex, long duration space missions.
+		//	============================================================================
+		//		ROC-GeminiEquipmentSectionBDB
+		#rocGeminiEquipmentSectionBDBTitle = Gemini Equipment Section
+		#rocGeminiEquipmentSectionBDBDesc = The Gemini Adapter Equipment Section. It contains O2 and H2 for fuel cell consumption and life support. It also contains fuel for manoeuvring and attitude control thrusters. This is the configuration as found on Gemini 10+. RCS O/F Ratio 1.223:1.
+		//	============================================================================
+		//		ROC-GeminiHSBDB
+		#rocGeminiHSBDBTitle = Gemini Heatshield
+		#rocGeminiHSBDBDesc = Heatshield for the Gemini Capsule, capable of lifting LEO reentry. Can be switched to the Gemini B configuration with a hatch.
+		//	============================================================================
+		//		ROC-GeminiHSLunarBDB
+		#rocGeminiHSLunarBDBTitle = Gemini Lunar Heatshield
+		#rocGeminiHSLunarBDBDesc = Improved, lunar rated heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch. <b><color=red>Gemini lacks the radiative heat protection of more advanced capsules. Extremely gentle Lunar reentries only.</color></b>
+		//	============================================================================
+		//		ROC-GeminiLCMBDB
+		#rocGeminiLCMBDBTitle = Gemini L Cabin
+		#rocGeminiLCMBDBDesc = Gemini L was one proposal for an advanced Gemini pod capable of reentry from translunar trajectory.  This would have included development of an improved TPS similar to the system used on Apollo.
+		//	============================================================================
+		//		ROC-GeminiNoseCapBDB
+		#rocGeminiNoseCapBDBTitle = Gemini Aerodynamic Nose Cover
+		#rocGeminiNoseCapBDBDesc = Covers up the nose of the Gemini Docking Mechanism to protect it during ascent. Jettison once out of the atmosphere.
+		//	============================================================================
+		//		ROC-GeminiNoseconeBDB
+		#rocGeminiNoseconeBDBTitle = Gemini Nose Docking Mechanism
+		#rocGeminiNoseconeBDBDesc = One of the most crucial skills that the Gemini program is meant to develop is the ability to rendevous and dock in space. This simple docking mechanism doesn't have the ability to transfer crew or resources, but it will allow you to connect two vessels in flight. This male active docking mechanism corresponds to the female Agena Docking Adapter. It include an indexing key, that slides into the V shape on the Agena Docking Adapter, to help line the two craft up properly.
+		//	============================================================================
+		//		ROC-GeminiNoseconeAeroBDB
+		#roGeminiNoseconeAeroBDBTitle = Gemini Nose Fairing
+		#roGeminiNoseconeAeroBDBDesc = A lighter nosecone for Gemini without the docking port.
+		//	============================================================================
+		//		ROC-GeminiOAMSRCSBDB
+		#roGeminiOAMSRCSBDBTitle = Gemini Orbit Attitude and Maneuvering System (SE-7-100) (RCS)
+		#roGeminiOAMSRCSBDBDesc = This tiny thruster is nevertheless more than sufficient to manuever the Gemini capsule around in low orbit. This part is configured as RCS.
+		//	============================================================================
+		//		ROC-GeminiOAMSBDB
+		#roGeminiOAMSBDBTitle = Gemini Orbit Attitude and Maneuvering System (SE-7-100)
+		#roGeminiOAMSBDBDesc = This tiny thruster is nevertheless more than sufficient to manuever the Gemini capsule around in low orbit. This part is configured as an engine.
+		//	============================================================================
+		//		ROC-GeminiParachuteBDB
+		#roGeminiParachuteBDBTitle = Gemini Landing Parachute System
+		#roGeminiParachuteBDBDesc = Main parachute for Gemini. Attaches on top of the Gemini Re-entry Control System.
+		//	============================================================================
+		//		ROC-GeminiParachuteDrogueBDB
+		#roGeminiParachuteDrogueBDBTitle = Gemini Drogue Parachute
+		#roGeminiParachuteDrogueBDBDesc = Drogue parachute for the Gemini capsule. Attach to the node in the nose section.
+		//	============================================================================
+		//		ROC-ReentryControlSystemBDB
+		#roReentryControlSystemBDBTitle = Gemini Re-entry Control System
+		#roReentryControlSystemBDBDesc = This section contains fuel and thrusters to provide Gemini 3 axis attitude control after detaching the adapter section. RCS O/F Ratio 1.25:1.
+		//	============================================================================
+		//		ROC-GeminiRetroBDB
+		#roGeminiRetroBDBTitle = Gemini Retro Rocket (Star-13E)
+		#roGeminiRetroBDBDesc = Gemini retro solid derived from the Star 13 orbit insertion motor. Place in 4x symmetry in the gaps of the retro module cruciform.
+		//	============================================================================
+		//		ROC-RetrogradeDecouplerBDB
+		#roRetrogradeDecouplerBDBTitle = Gemini Retrograde Section Decoupler
+		#roRetrogradeDecouplerBDBDesc = Low profile decoupler for separating the Gemini capsule from the Adapter Retrograde Section.
+		//	============================================================================
+		//		ROC-GeminiRetrogradeSectionBDB
+		#roGeminiRetrogradeSectionBDBTitle = Gemini Retrograde Section
+		#roGeminiRetrogradeSectionBDBDesc = This hollow structural adapter is designed to sit on top of the Gemini equipment section and house a quad of retro motors for reentry. Houses six translational control thrusters.
+		//	============================================================================
 	}
 }
