--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiAntenna.cfg
@@ -11,6 +11,8 @@ PART
 		model = ROCapsules/Assets/BDB/Gemini/bluedog_Gemini_UHFAntenna
 	}
 
+	//http://www.svengrahn.pp.se/radioind/GeminiRadios/GeminiRadio.html
+	//http://geminiguide.com/Systems/comm.html#UHF_Whip_Antennas
 	scale = 1
 	rescaleFactor = 1.524
 	//node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0
@@ -20,12 +22,12 @@ PART
 	cost = 75
 	category = Communication
 	subcategory = 0
-	title = Gemini UHF Antenna
-	manufacturer = General Electric
-	description = A small extending antenna used for maintaining communications between the Gemini spacecraft and the ground. Attaches to the equipment section
+	title = #rocGeminiAntennaBDBTitle	//Gemini UHF Whip Antenna
+	manufacturer = #roMfrGE
+	description = #rocGeminiAntennaBDBDesc
 
 	attachRules = 0,1,0,0,1
-	mass = 0.003
+	mass = 0.0036
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -43,7 +45,7 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = deploy
-		isOneShot = false
+		isOneShot = true	//spring-loaded, could not retract
 		startEventGUIName = Extend
 		endEventGUIName = Retract
 		actionGUIName = Toggle Antenna
