--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBEquipmentSection.cfg
@@ -21,15 +21,15 @@ PART
 	sound_decoupler_fire = decouple
 	
 	attachRules = 1,0,1,1,0
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 780
 	category = Propulsion
 	subcategory = 0
 	title = Gemini B Adapter Module
-	manufacturer = McDonnell Aircraft
+	manufacturer = #roMfrMcDonnell
 	description = The lower half of the Gemini-B adapter, with batteries and separation motors. Decoupler detaches the bottom node. Designed for the MOL program, it was tested uncrewed, but the program was cancelled before any manned launches.
-	mass = 0.250
+	mass = 0.064
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.20
@@ -132,8 +132,8 @@ PART
 	{
 		name = ModuleFuelTanks
 		volume = 131
-		type = ServiceModule
-		basemass = -1
+		type = SM-III
+		basemass = 0.064
 		TANK
 		{
 			name = ElectricCharge
