--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiB/GeminiBRetrogradeSection.cfg
@@ -65,16 +65,16 @@ PART
 	}
 
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 260
 	category = Coupling
 	subcategory = 0
 	title = Gemini B Retro Module
-	manufacturer = Douglas Aircraft
+	manufacturer = #roMfrMcDonnell
 	description = A hollow structural adapter with mounting points for 4 retrorockets, and a passage for crew. Hold ALT to make attaching the retrorockets easier. Decoupler detaches the bottom node (adapter module). Designed for the MOL program, it was tested uncrewed, but the program was cancelled before any manned launches.
 	attachRules = 1,0,1,1,0
-	mass = 0.064 // $260/0.064 structure
+	mass = 0.12349
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
