--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -6,6 +6,301 @@ PART
 	author = Cobaltwolf,capkirk
 
 	RSSROConfig = True
+	
+	//	================================================================================
+	//Source for all Gemini Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//	================================================================================
+	//Gemini Command Module Dry Mass Breakdowns:
+	//	================================================================================
+	//CM: 2964.95 lbs
+	//	Structure: 881.12 lbs
+	//		Side Panels: 44.47 lbs
+	//		ECS Bay: 37.67 lbs
+	//		Miscellaneous Panels: 8.67 lbs
+	//		ECS Door: 26.77 lbs
+	//		Equipment Supports, Side Panels: 8.54
+	//		Sealant: 5.0 lbs
+	//		Large Bulkhead Panels: 18.14 lbs
+	//		Large Bulkhead Stiffeners: 44.41 lbs
+	//		Large Bulkhead Installation: 16.17 lbs
+	//		Small Bulkhead Panels: 12.56 lbs
+	//		Small Bulkhead Stiffeners: 3.14 lbs
+	//		Crew Hatch Fixed Structure: 57.84 lbs
+	//		Crew Hatch Actuator: 44.3 lbs
+	//		Crew Hatch Hinge Fitting, Drive Beam: 37.0 lbs
+	//		Crew Hatch Basic Skin: 29.3 lbs
+	//		Crew Hatch Structure Details: 81.46 lbs
+	//		Crew Hatch Window: 25.74 lbs
+	//		Crew Hatch Window Mechanism: 44.69 lbs
+	//		Crew Hatch Flipper Doors: 10.86 lbs
+	//		Crew Hatch Flotation Curtains: 2.9 lbs
+	//		Crew Hatch Attach Bolts: 4.63 lbs
+	//		Skin Panels, Forward Small BHD: 14.96 lbs
+	//		Panels, Small Bulkhead: 7.59 lbs
+	//		Panels, Outboard of Hatches: 4.19 lbs
+	//		Stringers: 27.5 lbs
+	//		Stiffeners: 2.25 lbs
+	//		Rings: 9.82 lbs
+	//		Main Landing Gear Fittings: 31.9 lbs
+	//		Large Bulkhead: 25.15 lbs
+	//		Top Center Beam: 10.01 lbs
+	//		Floor Extension: 8.24 lbs
+	//		Equipment Support Beams: 24.65 lbs
+	//		Door, Equipment Access: 43.46 lbs
+	//		Door, Main Landing Gear: 29.02 lbs
+	//		Door, Umbilical: 2.33 lbs
+	//		Door, Miscellaneous Access: 4.6 lbs
+	//		Miscellaneous Structure Detail: 11.8 lbs
+	//		Horizon Sensor Cover: 9.21 lbs
+	//		Hoist Fittings: 8.12 lbs
+	//		Flotation Material: 6.98 lbs
+	//		Paint: 6.7 lbs
+	//		Repairs: 7.5 lbs
+	//		Attaching Hardware: 20.88 lbs
+	//	TPS: 199.63 lbs
+	//		Crew Hatch Shingles: 31.58 lbs
+	//		Crew Hatch Insulation: 18.51 lbs
+	//		Cabin Wall Shingles: 65.36 lbs
+	//		Cabin Wall Insulation: 84.18 lbs
+	//	Power: 237.3 lbs
+	//		Batteries: 102.26 lbs
+	//		Battery Mounting: 12.38 lbs
+	//		Relay Panels: 13.62 lbs
+	//		Diode Panel: 0.8 lbs
+	//		Power/Control Circuitry: 67.8 lbs
+	//		Nose Fairing Sep Circuitry: 2.36 lbs
+	//		Rendezvous & Recovery Sep Circ: 8.84 lbs
+	//		Adapter Separation Circuitry: 17.32 lbs
+	//		Booster Separation Circuitry: 2.8 lbs
+	//		Mounting & Installation, Misc: 9.12 lbs
+	//	Avionics: 552.49 lbs
+	//		Package: 17.42 lbs
+	//		Inverter: 6.58 lbs
+	//		Rate Gyros: 8.54 lbs
+	//		Computer: 58.89 lbs
+	//		Platform: 33.2 lbs
+	//		Platform Electronics: 39.75 lbs
+	//		Power Supply: 47.9 lbs
+	//		Auxiliary Power Supply: 3.9 lbs
+	//		Computer Coldplate: 7.21 lbs
+	//		Display I/O: 4.1 lbs
+	//		Horizon Sensor: 22.02 lbs
+	//		Mounting & Installation: 10.83 lbs
+	//		Circuitry: 44.2 lbs
+	//		Tape Recorder: 13.83 lbs
+	//		Cameras: 11.27 lbs
+	//		Tape Cartridges: 4.74 lbs
+	//		Transmitters (2): 5.04 lbs
+	//		Multiplexers: 5.79 lbs
+	//		PCM Programmer: 20.06 lbs
+	//		Power Converter/Regulator: 13.92 lbs
+	//		Data Cond Instr Pkgs: 12.04 lbs
+	//		Sensors: 12.86 lbs
+	//		Bio-Medical: 10.06 lbs
+	//		Mountings: 2.86 lbs
+	//		Circuitry: 75.44 lbs
+	//		Multiplexing/Switching: 4.72 lbs
+	//		UHF Voice: 6.26 lbs
+	//		C-Band Beacon: 10.67 lbs
+	//		Voice Control Center: 6.29 lbs
+	//		Mounting: 0.63 lbs
+	//		Antennas: 2.61 lbs
+	//		Circuitry: 28.89 lbs
+	//	Environment: 1065.46 lbs
+	//		Displays: 90.09 lbs
+	//		Crew Systems: 605.34 lbs
+	//		Environ Control Syst: 299.98 lbs
+	//		Panels & Consoles: 60.98 lbs
+	//		Abort Controls: 1.67 lbs
+	//		Manual Controls: 5.29 lbs
+	//		Lights: 2.11 lbs
+	//	Other: 28.95 lbs
+	//		Retrograde Circuitry: 6.86 lbs
+	//		HF Voice: 12.74 lbs
+	//		Circuitry: 6.55 lbs
+	//		Propulsion Circuitry: 6.15 lbs
+	//		Electronic Circuitry: 3.65 lbs
+	//		Actual Weight Adjustment: -7.0 lbs
+	//	================================================================================
+	//Nose Cap: 26.4 lbs
+	//	Structural: 26.4 lbs
+	//		R&R Section Nose Fairing: 26.4 lbs
+	//	================================================================================
+	//Nose Docking Mechanism: 295.86 lbs
+	//	Structural: 68.51 lbs
+	//		R&R Section Skin, Stringers: 25.79 lbs
+	//		R&R Section Rings: 18.54 lbs
+	//		R&R Section Separation Ring: 3.11 lbs
+	//		R&R Section Miscellaneous Structure Detail: 7.74 lbs
+	//		R&R Section Equipment Mounting: 1.72 lbs
+	//		R&R Section Attachment Hardware: 11.61 lbs
+	//	TPS: 122.35 lbs
+	//		R&R Section Shingles: 73.67 lbs
+	//		R&R Section Insulation: 48.68 lbs
+	//	Other: 105.0 lbs
+	//		Docking Structure/Mechanism: 14.32 lbs
+	//		Docking Control: 6.15 lbs
+	//		Docking Circuitry: 10.22 lbs
+	//		Radar Electronics: 74.31 lbs
+	//	================================================================================
+	//Aerodynamic Nose Fairing: 190.86 lbs (Alternate, not incl.)
+	//	Structural: 68.51 lbs
+	//		R&R Section Skin, Stringers: 25.79 lbs
+	//		R&R Section Rings: 18.54 lbs
+	//		R&R Section Separation Ring: 3.11 lbs
+	//		R&R Section Miscellaneous Structure Detail: 7.74 lbs
+	//		R&R Section Equipment Mounting: 1.72 lbs
+	//		R&R Section Attachment Hardware: 11.61 lbs
+	//	TPS: 122.35 lbs
+	//		R&R Section Shingles: 73.67 lbs
+	//		R&R Section Insulation: 48.68 lbs
+	//	================================================================================
+	//Drogue Parachute: 41.01 lbs
+	//	Other: 41.01 lbs
+	//		Pilot Chute: 13.19 lbs
+	//		Pilot Chute Installation: 6.61 lbs
+	//		Drogue Chute: 13.54 lbs
+	//		Drogue Chute Installation: 7.67 lbs
+	//	================================================================================
+	//Landing Parachute System: 178.1 lbs
+	//	Other: 178.1 lbs
+	//		Main Chute: 111.94 lbs
+	//		Main Bridle: 7.6 lbs
+	//		Main Container: 10.7 lbs
+	//		Main Structural Ring/Hub: 19.79 lbs
+	//		Main Circuitry: 6.86 lbs
+	//		Pilot/Drogue Circuitry: 11.17 lbs
+	//		Recovery Light: 3.05 lbs
+	//		Rescue Beacon: 4.49 lbs
+	//		Dye Marker: 1.25 lbs
+	//		Structural Mounting: 1.25 lbs
+	//	================================================================================
+	//Re-entry Control System: 284.14 lbs
+	//	Structural: 78.1 lbs
+	//		RCS Section Skin, Stringers: 17.7 lbs
+	//		RCS Section Rings: 30.26 lbs
+	//		RCS Section Miscellaneous Structure Detail: 2.26 lbs
+	//		RCS Section Flotation Material: 19.19 lbs
+	//		RCS Section Sealant: 0.78 lbs
+	//		RCS Section Attaching Hardware: 7.91 lbs
+	//	TPS: 62.42 lbs
+	//		RCS Section Shingles: 38.19 lbs
+	//		RCS Section Insulation: 24.23 lbs
+	//	Propulsion: 143.62 lbs
+	//		Engines: 37.44 lbs
+	//		Engine Mounting: 4.2 lbs
+	//		Pressurization System Tanks: 4.32 lbs
+	//		Pressurization Tank Mounting: 1.68 lbs
+	//		Pressurization System Valving: 21.88 lbs
+	//		Oxidizer Tank: 7.67 lbs
+	//		Oxidizer Tank Mounting: 1.68 lbs
+	//		Oxidizer Valving: 4.52 lbs
+	//		Fuel Tank: 8.54 lbs
+	//		Fuel Tank Mounting: 1.34 lbs
+	//		Fuel Valving: 4.48 lbs
+	//		Lines, Misc: 8.41 lbs
+	//		Shut-Off Valves: 8.88 lbs
+	//		Valving, Misc: 6.07 lbs
+	//		Mounting Details, Misc: 0.72 lbs
+	//		Heaters: 3.76 lbs
+	//		Circuitry: 18.03 lbs
+	//	================================================================================
+	//Heatshield: 365.36 lbs
+	//	Structural: 20.16 lbs
+	//		Rings, Heat Shield Attach: 9.02 lbs
+	//		Tension Ties: 11.14 lbs
+	//	TPS: 345.2 lbs
+	//		Ablative Material: 187.06 lbs
+	//		Edge Ring: 27.4 lbs
+	//		Honeycomb Back-Up: 103.93 lbs
+	//		Ring, Heat Shield Attach: 12.05 lbs
+	//		Spacers, Shield Back-Up: 10.24 lbs
+	//		Mounting Details: 3.66 lbs
+	//		Actual Weight: 0.86 lbs
+	//	================================================================================
+	//TOTAL DRY MASS: 4155.82 lbs
+	//	Structure: 1074.29 lbs
+	//	TPS: 729.6 lbs
+	//	Propulsion: 143.62 lbs
+	//	Power: 237.3 lbs
+	//	Avionics: 552.49 lbs
+	//	Environmental: 1065.46 lbs
+	//	Other: 353.06 lbs
+
+	//	================================================================================
+	//Gemini Command Module Inert Mass Breakdowns:
+	//	================================================================================
+	//CM: 148.0 lbs (+ 416.0 lbs crew, 5.0 lbs equipment, 27.0 lbs Experiments. 596.0 lbs all included)
+	//	Non-Cargo: 148.0 lbs
+	//		Crew: 416.0 lbs (not incl.)
+	//		Crew Equipment: 5.0 lbs (not incl.)
+	//		Ballast: 148.0 lbs
+	//	Cargo: 0.0 lbs
+	//		Experiments: 27.0 lbs (not incl.)
+	//INERT MASS: 148.0 lbs
+
+	//TOTAL INERT MASS: 4303.82 lbs (4751.82 lbs all included)
+
+	//	================================================================================
+	//Gemini Command Module Wet Mass Breakdowns:
+	//	================================================================================
+	//CM: 34.0 lbs
+	//	Non-Propellant: 34.0 lbs
+	//		Food: 5.0 lbs
+	//		Water (Crew): 15.0 lbs
+	//		Oxygen (Crew-Secondary): 14.0 lbs
+	//Re-entry Control System: 75.0 lbs
+	//	Non-Propellant: 3.0 lbs
+	//		N2 Gas (RCS): 3.0 lbs
+	//	Propellant: 72.0 lbs
+	//		Fuel: 32.0 lbs
+	//		Oxidizer: 40.0 lbs
+
+	//GROSS MASS: 4412.82 lbs
+	//ALL INCLUDED GROSS MASS: 4860.82 lbs
+
+	//	================================================================================
+	//Kerbonaut weight: 220 lbs (close enough)
+	//Remaining mass of equipment spread among kerbalism experiments, life support supplies
+	//	================================================================================
+
+	//	================================================================================
+	//Ultimate Part Mass Assignments:
+	//	================================================================================
+	//	Nose Cap: 26.4 lbs (11.97 kg)
+	//		Dry Mass: 26.4 lbs
+	//	================================================================================
+	//	Nose Docking Mechanism: 295.86 lbs (134.20 kg)
+	//		Dry Mass: 295.86 lbs
+	//	================================================================================
+	//	Aerodynamic Nose Fairing: 190.86 lbs (86.57 kg) (Alternate, not incl.)
+	//		Dry Mass: 190.86 lbs
+	//	================================================================================
+	//	Drogue Parachute: 41.01 lbs (18.60 kg)
+	//		Dry Mass: 41.01 lbs
+	//	================================================================================
+	//	Landing Parachute System: 178.1 lbs (80.78 kg)
+	//		Dry Mass: 178.1 lbs
+	//	================================================================================
+	//	Re-entry Control System: 284.14 lbs (128.88 kg)
+	//		Dry Mass: 284.14 lbs
+	//	================================================================================
+	//	CM: 3112.95 lbs (1412.01 kg), 3146.95 lbs (1427.43 kg) compensated for LS mass
+	//		Dry Mass: 2964.95 lbs
+	//		Inert Mass: 148.0 lbs
+	//		LS Compensation Mass: 34.0 lbs
+	//	================================================================================
+	//	Heatshield: 365.36 lbs (165.72 kg)
+	//		Dry Mass: 365.36 lbs
+	//	================================================================================
+	//INERT MASS: 4303.82 (1952.18 kg)
+	
+	//	================================================================================
+	//Tank Mass Compensation
+	//	================================================================================
+	//	RCS Propellant Tank (SM-III): 5.54 kg
+	//	CM LS Tank (SM-III): 75.44 kg
+	//	CM Batteries (SM-III): 26.0 kg
 
 	MODEL
 	{
@@ -22,20 +317,22 @@ PART
 
 	CoPOffset = 0.0, 0.4, 0.0
 	CoLOffset = 0.0, -0.4, 0.0
+	CoMOffset = 0, -0.28, 0
 	CenterOfBuoyancy = 0.0, 0.0, -0.3
 	CenterOfDisplacement = 0.0, -0.35, 0.0
 	buoyancy = 1.75
 	buoyancyUseSine = False
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 2000
 	category = Pods
 	subcategory = 0
-	title = Gemini Command Pod
-	manufacturer = McDonnell Aircraft
-	description = The Gemini cabin. Contains two astronauts.
-	mass = 1.0377
+	title = #rocGeminiCMBDBTitle	//Gemini Cabin
+	manufacturer = #roMfrMcDonnell
+	description = #rocGeminiCMBDBDesc
+	mass = 1.37586	//1412.01 kg - 26 kg (Batteries) - 18 kg (Antenna) - 3 kg (Habitat Atmosphere) - 20 kg (Other?) + 15.42 kg (Life Support Resources. LiOH included in inert mass)
+	//1427.43 incl. LS mass compensation
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -71,22 +368,22 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 2.09
+			rate = 0.62		//https://core.ac.uk/download/pdf/42825953.pdf 620 W average power draw
 		}
 	}
 
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, 0.06		//Gemini reentered "upside-down" to protect crew hatches
+		DescentModeCoM = 0.0, 0.0, 0.08		//Gemini reentered "upside-down" to protect crew hatches
 	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
+		type = SM-III
 		volume = 525
-		basemass = -1
+		basemass = 1.37586
 		TANK
 		{
 			name = ElectricCharge
@@ -370,6 +667,8 @@ PART
 	}
 	@MODULE[ModuleFuelTanks]
 	{
+		@basemass -= 0.09686	//75.44 kg tanks, 15.42 kg LS resources, 6 kg LiOH
+		//we actually have more LS resources than this, because the reference is a 2-day mission and we're loaded for 14 days.
 		TANK
 		{
 			name = Food
@@ -379,14 +678,14 @@ PART
 		TANK
 		{
 			name = Water
-			amount = 8
-			maxAmount = 8	// 1 day
+			amount = 6.8
+			maxAmount = 6.8	// 6.8 kg
 		}
 		TANK
 		{
 			name = Oxygen
-			amount = 1184
-			maxAmount = 1184	// 1 day
+			amount = 4503
+			maxAmount = 4503	// 6.35 kg
 		}
 		TANK
 		{
@@ -409,8 +708,8 @@ PART
 		TANK
 		{
 			name = LithiumHydroxide
-			amount = 29
-			maxAmount = 29	// 14 days
+			amount = 24.6
+			maxAmount = 24.6	// 15 days
 		}
 	}
 }
@@ -439,6 +738,20 @@ PART
 		%kerbalScale = 1.1, 1.1, 1.1
 		%kerbalOffset = 0.0, -0.1, 0.0
 		%kerbalEyeOffset = 0.0, 0.0, 0.0
+	}
+}
+
+//	================================================================================
+//	Reduce power draw to compensate for RA antennas
+//	================================================================================
+@PART[ROC-GeminiCMBDB]:NEEDS[RealAntennas]
+{
+	@MODULE[ModuleCommand]
+	{
+		@RESOURCE[ElectricCharge]
+		{
+			@rate -= 0.0514 //Remove Antenna idle power draw. Assuming two TL4 Antennas using 25.7 W idle
+		}
 	}
 }
 
