--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
@@ -17,16 +17,16 @@ PART
 	CoPOffset = 0.0, 1.0, 0.0
 	CoLOffset = 0.0, -0.15, 0.0
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 1000
 	cost = 360
 	category = Thermal
 	subcategory = 0
-	title = Gemini Heatshield
-	manufacturer = McDonnell Aircraft
-	description = Heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch
+	title = #rocGeminiHSBDBTitle	//Gemini Heatshield
+	manufacturer = #roMfrMcDonnell
+	description = #rocGeminiHSBDBDesc
 	attachRules = 1,0,1,0,0
-	mass = 0.050
+	mass = 0.04472	//165.72 kg - 121 kg ablator
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -45,7 +45,7 @@ PART
 	heatShieldDiameter = 2.2
 	heatShieldTag = Gemini
 	resetHeatShieldAblator = true
-	resetHeatShieldMass = true
+	resetHeatShieldMass = false
 
 	MODULE
 	{
