--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
@@ -1,8 +1,9 @@
 +PART[ROC-GeminiHSBDB]:FIRST
 {
 	@name = ROC-GeminiHSLunarBDB
-	@title = Gemini Lunar Heatshield
-	@description = Improved, lunar rated heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch. <b><color=red>Gemini lacks the radiative heat protection of more advanced capsules. Extremely gentle Lunar reentries only.</color></b>
+	@title = #rocGeminiHSLunarBDBTitle	//Gemini Lunar Heatshield
+	@manufacturer = #roMfrMD
+	@description = #rocGeminiHSLunarBDBDesc
 	@heatShieldTag = EarlyLunar
 	
 	DRAG_CUBE
