--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiLCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiLCM.cfg
@@ -22,20 +22,21 @@ PART
 
 	CoPOffset = 0.0, 0.4, 0.0
 	CoLOffset = 0.0, -0.4, 0.0
+	CoMOffset = 0, -0.28, 0
 	CenterOfBuoyancy = 0.0, 0.0, -0.3
 	CenterOfDisplacement = 0.0, -0.35, 0.0
 	buoyancy = 1.75
 	buoyancyUseSine = False
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 3000
 	category = Pods
 	subcategory = 0
-	title = Gemini L Command Pod
-	manufacturer = McDonnell Aircraft
-	description = Gemini L was one proposal for an advanced Gemini pod capable of reentry from translunar trajectory.  This would have included development of an improved TPS similar to the system used on Apollo.
-	mass = 1.3368
+	title = #rocGeminiLCMBDBTitle	//Gemini L Cabin
+	manufacturer = #roMfrMD
+	description = #rocGeminiLCMBDBDesc
+	mass = 1.38586
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -48,9 +49,13 @@ PART
 	bulkheadProfiles = size0, size1p2
 
 	//Thermal Stuff
-	//Theoretical ablative coating similar to Apollo
-	maxTemp = 973.15					//Match Apollo
-	skinMaxTemp = 3000					//Match Apollo
+	//Same as Apollo
+	//Skin made of Stainless steel, coated with ablative layer of varying thickness, and Klapton insulation
+	//Peak temp on HS: ~3000 K
+	//Peak temp on Walls: ~2000 K
+	//Peak temp on forward surfaces: ~1100 K
+	maxTemp = 448
+	skinMaxTemp = 2000					//Ablative coating wrapped around sides of Apollo to account for extreme flux.
 	emissiveConstant = 0.4				//Metallicized Klapton coating.
 	heatConductivity = 1.0				//All conductivity. Leave this alone for now
 	thermalMassModifier = 1.0			//Thermal mass. Leave this alone for now
@@ -66,6 +71,39 @@ PART
 		name = ROC-GeminiBDB-Internal
 	}
 
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+	
+	//Same structure as main HS
+	//Tweak HS settings slightly to get more agressive ablation. Control temps better and consume more ablator
+	//This actually survives LEO reentry on it's own. Probably not ideal
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0.8
+		lossExp = -20000
+		lossConst = 150
+		pyrolysisLossFactor = 145833
+		ablationTempThresh = 1250
+		reentryConductivity = 0.0025
+		infoTemp = 3000
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 56.47
+		amount = 56.47
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 45.17
+		amount = 0
+	}
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -74,27 +112,27 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 2.09
+			rate = 0.62		//https://core.ac.uk/download/pdf/42825953.pdf 620 W average power draw
 		}
 	}
 
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, 0.06		//Gemini reentered "upside-down" to protect crew hatches
+		DescentModeCoM = 0.0, 0.0, 0.08		//Gemini reentered "upside-down" to protect crew hatches
 	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
+		type = SM-III
 		volume = 525
-		basemass = -1
+		basemass = 1.38586
 		TANK
 		{
 			name = ElectricCharge
-			amount = 40000
-			maxAmount = 40000
+			amount = 14400
+			maxAmount = 14400
 		}
 	}
 
@@ -289,14 +327,14 @@ PART
 		TANK
 		{
 			name = Water
-			amount = 8
-			maxAmount = 8	// 1 day
+			amount = 6.8
+			maxAmount = 6.8	// 6.8 kg
 		}
 		TANK
 		{
 			name = Oxygen
-			amount = 1184
-			maxAmount = 1184	// 1 day
+			amount = 4503
+			maxAmount = 4503	// 6.35 kg
 		}
 		TANK
 		{
@@ -319,8 +357,8 @@ PART
 		TANK
 		{
 			name = LithiumHydroxide
-			amount = 29
-			maxAmount = 29	// 14 days
+			amount = 24.6
+			maxAmount = 24.6	// 15 days
 		}
 	}
 }
@@ -334,21 +372,17 @@ PART
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
 
-
-// RO itself rescales FASA's Internal. ROC copied FASA's Internal and
-// kept its name, presumably to inherit that rescaling; but it's not
-// quite right for the BDB capsule. So make our own copy we can tweak
-// without affecting the original
-+INTERNAL[FASAGeminiInt2]:BEFORE[RealismOverhaul]
+//	================================================================================
+//	Reduce power draw to compensate for RA antennas
+//	================================================================================
+@PART[ROC-GeminiCMBDB]:NEEDS[RealAntennas]
 {
-	@name = ROC-GeminiBDB-Internal
-	%scaleAll = 1.219, 1.194, 1.219
-
-	@MODULE[InternalSeat],*
+	@MODULE[ModuleCommand]
 	{
-		%kerbalScale = 1.1, 1.1, 1.1
-		%kerbalOffset = 0.0, -0.1, 0.0
-		%kerbalEyeOffset = 0.0, 0.0, 0.0
+		@RESOURCE[ElectricCharge]
+		{
+			@rate -= 0.0514 //Remove Antenna idle power draw. Assuming two TL4 Antennas using 25.7 W idle
+		}
 	}
 }
 
@@ -357,7 +391,7 @@ PART
 //	================================================================================
 @PART[ROC-GeminiLCMBDB]:AFTER[RealismOverhaul]
 {
-	@skinMaxTemp = 3000		//Raising this until we can find a better way to deal with excess heat flux
+	@skinMaxTemp = 2000
 }
 
 KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
@@ -394,7 +428,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 		%VARIANT[Lunar] {
 			%name = Lunar
 			%displayName = Gemini L
-			%primaryColor = silver			
+			%primaryColor = silver
 			%SecondaryColor = silver
 			%EXTRA_INFO
 			{
