--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseCap.cfg
@@ -14,16 +14,17 @@ PART
 	scale = 1
 	rescaleFactor = 1.524
 	node_stack_bottom = 0.0, -0.037335, 0.0, 0.0, -1.0, 0.0, 0
-	TechRequired = flightControl
+
+	TechRequired = unlockParts
 	entryCost = 50
 	cost = 10
 	category = Aero
 	subcategory = 0
-	title = Gemini Aerodynamic Nose Cover
-	manufacturer = McDonnell Aircraft
-	description = Covers up the nose of the Gemini Docking Mechanism to protect it during ascent. Jettison once out of the atmosphere.
+	title = #rocGeminiNoseCapBDBTitle	//Gemini Aerodynamic Nose Cover
+	manufacturer = #roMfrMcDonnell
+	description = #rocGeminiNoseCapBDBDesc
 	attachRules = 1,1,0,0,0
-	mass = 0.01
+	mass = 0.01197
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
