--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseconeAero.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseconeAero.cfg
@@ -27,15 +27,15 @@ PART
 	}
 
 	attachRules = 1,0,1,1,0
-	TechRequired = generalConstruction
+	TechRequired = unlockParts
 	entryCost = 750
 	cost = 210
 	category = Coupling
 	subcategory = 0
-	title = Gemini Aerodynamic Nose Fairing
-	manufacturer = McDonnell Aircraft
-	description = A more aerodynamic nosecone for Gemini without the docking port.
-	mass = 0.077
+	title = #roGeminiNoseconeAeroBDBTitle	//Gemini Nose Fairing
+	manufacturer = #roMfrMcDonnell
+	description = #roGeminiNoseconeAeroBDBDesc
+	mass = 0.08657
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.2
@@ -50,9 +50,10 @@ PART
 	bulkheadProfiles = size00, size0
 
 	//Thermal Stuff
-	//Fiberglass over titanium frame
-	skinTempTag = Fiberglass
+	//Titanium structure with Beryllium shingles. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinTempTag = Beryllium
 	internalTempTag = Titanium
+	skinInsulationTag = True
 
 	tags = gemini dock docking port gatv agena target
 
@@ -78,12 +79,4 @@ PART
 			}
 		}
 	}
-}
-
-//	================================================================================
-//	Override RO global settings to get our temperatures back
-//	================================================================================
-@PART[ROC-GeminiNoseconeAeroBDB]:AFTER[RealismOverhaul]
-{
-	@skinMaxTemp = 1273
 }
