--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiOAMS.cfg
@@ -23,16 +23,16 @@ PART
 		method = FIXED_JOINT
 	}
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 800
 	cost = 150
 	category = Control
 	subcategory = 0
-	title = Gemini Orbit Attitude and Maneuvering System (RCS)
-	manufacturer = TRW
-	description = This tiny thruster is nevertheless more than sufficient to manuever the Gemini capsule around in low orbit. This part is configured as RCS.
+	title = #roGeminiOAMSRCSBDBTitle	//Gemini Orbit Attitude and Maneuvering System (SE-7-100) (RCS)
+	manufacturer = #roMfrRocketdyne
+	description = #roGeminiOAMSRCSBDBDesc
 	attachRules = 1,1,0,0,0
-	mass = 0.0125
+	mass = 0.00559
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -46,7 +46,7 @@ PART
 	skinTempTag = Molybdenum
 	internalTempTag = Instruments
 
-	tags = gemini rcs thruster oams
+	tags = gemini rcs thruster oams se7
 
 
 	EFFECTS
@@ -80,12 +80,14 @@ PART
 		}
 	}
 
+	//source: http://rocketrelics.org/liquid_propulsion.html
+	//source: http://geminiguide.com/propulsion.html
 	MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = thrustTransform
-		thrusterPower = 0.4448222 // 100 lb
+		thrusterPower = 0.440374 // 99 lbf
 		resourceFlowMode = STACK_PRIORITY_SEARCH
 		runningEffectName = runningRCS
 		rcsEnabled = False
@@ -96,26 +98,27 @@ PART
 		enablePitch = false
 		enableYaw = false
 		useZaxis = True
+		//1.223 MR based on fuel load
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5511
+			ratio = 0.5711
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4489
+			ratio = 0.4289
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 13.65
 			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
-			key = 0 273
-			key = 1 100
+			key = 0 296
+			key = 1 1
 		}
 	}
 
@@ -151,16 +154,16 @@ PART
 		method = FIXED_JOINT
 	}
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 800
 	cost = 150
 	category = Control
 	subcategory = 0
-	title = Gemini Orbit Attitude and Maneuvering System
-	manufacturer = TRW
-	description = This tiny thruster is nevertheless more than sufficient to manuever the Gemini capsule around in low orbit. This part is configured as an engine.
+	title = #roGeminiOAMSBDBTitle	//Gemini Orbit Attitude and Maneuvering System (SE-7-100)
+	manufacturer = #roMfrRocketdyne
+	description = #roGeminiOAMSBDBDesc
 	attachRules = 1,1,0,0,0
-	mass = 0.0125
+	mass = 0.00559
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -174,10 +177,10 @@ PART
 	bulkheadProfiles = srf
 	
 	//refractory metal
-	skinTempTag = Inconel
+	skinTempTag = Molybdenum
 	internalTempTag = Instruments
 
-	tags = gemini rcs thruster oams
+	tags = gemini rcs thruster oams se7
 
 
 	EFFECTS
@@ -226,39 +229,38 @@ PART
 		type = ModuleEngines
 		configuration = OAMS
 		modded = false
-		origMass = 0.0125
+		origMass = 0.00559
 
 		CONFIG
 		{
 			name = OAMS
-			minThrust = 0.4448222 // 100 lb
-			maxThrust = 0.4448222 // 100 lb
+			minThrust = 0.440374 // 99 lbf
+			maxThrust = 0.440374 // 99 lbf
 			ullage = False
 			pressureFed = True
 			ignitions = 0
 
+			//1.223 MR based on fuel load
 			PROPELLANT
 			{
 				name = MMH
-				ratio = 0.5511
-				DrawGauge = true
+				ratio = 0.5711
 			}
 			PROPELLANT
 			{
 				name = NTO
-				ratio = 0.4489
+				ratio = 0.4289
 			}
 			PROPELLANT
 			{
 				name = Helium
-				ratio = 10.0
+				ratio = 13.65
 				ignoreForIsp = true
 			}
-
 			atmosphereCurve
 			{
-				key = 0 273
-				key = 1 100
+				key = 0 296
+				key = 1 1
 			}
 		}
 	}
