--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachute.cfg
@@ -22,15 +22,16 @@ PART
 	sound_parachute_single = deploy
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
-	TechRequired = flightControl
+
+	TechRequired = unlockParts
 	entryCost = 2000
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = Gemini Landing Parachute System
-	manufacturer = Parasystems, Inc.
-	description	 = Main parachute for Gemini
-	mass = 0.049
+	title = #roGeminiParachuteBDBTitle	//Gemini Landing Parachute System
+	manufacturer = #roMfrMcDonnell
+	description = #roGeminiParachuteBDBDesc
+	mass = 0.05168	//80.78 kg - 29.1 kg RealChute Parachute
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.20
@@ -82,7 +83,7 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.049
+		caseMass = 0.05168
 		timer = 0
 		mustGoDown = true
 		spareChutes = 0
