--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachuteDrogue.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachuteDrogue.cfg
@@ -27,16 +27,17 @@
 	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
 	sound_parachute_single = deploy
-	TechRequired = engineering101
+
+	TechRequired = unlockParts
 	entryCost = 1000
 	cost = 200
 	category = Utility
 	subcategory = 0
-	title = Gemini Drogue Parachute
-	manufacturer = Parasystems, Inc.
-	description = Drogue parachute for the Gemini capsule. Attach to the node in the nose section.
+	title = #roGeminiParachuteDrogueBDBTitle	//Gemini Drogue Parachute
+	manufacturer = #roMfrMcDonnell
+	description = #roGeminiParachuteDrogueBDBDesc
 	attachRules = 1,0,0,1,0
-	mass = 0.032
+	mass = 0.017	//18.60 kg - 1.6 kg RealChute Parachute
 	dragModelType = default
 	angularDrag = 3
 	crashTolerance = 12
@@ -77,7 +78,7 @@
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.032
+		caseMass = 0.017
 		timer = 0
 		mustGoDown = false
 		spareChutes = 1
