--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
@@ -18,15 +18,16 @@ PART
 	node_stack_bottom = 0.0, -0.15536, 0.0, 0.0, -1.0, 0.0, 0
 	node_stack_top = 0.0,  0.1293, 0.0, 0.0, 1.0, 0.0, 0
 	attachRules = 1,0,1,1,0
-	TechRequired = flightControl
+
+	TechRequired = unlockParts
 	entryCost = 1500
 	cost = 360
 	category = Control
 	subcategory = 0
-	title = Gemini Re-entry Control System
-	manufacturer = McDonnell Aircraft
-	description = This section contains fuel and thrusters to provide Gemini 3 axis attitude control after detaching the adapter section. RCS O/F Ratio 1.3:1.
-	mass = 0.133
+	title = #roReentryControlSystemBDBTitle	//Gemini Re-entry Control System
+	manufacturer = #roMfrMcDonnell
+	description = #roReentryControlSystemBDBDesc
+	mass = 0.12334	//128.88 kg - 5.54 kg (Tanks)
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.20
@@ -79,12 +80,16 @@ PART
 		}
 	}
 
+	//Rocketdyne SE-6
+	//source: http://rocketrelics.org/liquid_propulsion.html
+	//source: https://space1.com/Artifacts/Gemini_Artifacts/RCS_Thruster/rcs_thruster.html
+	//Expansion ratio ~24 (from pixel counting)
 	MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsTransform
-		thrusterPower = 0.1112055 // 25 lb
+		thrusterPower = 0.1045 // 23.5 lb
 		resourceFlowMode = STACK_PRIORITY_SEARCH
 		runningEffectName = rcsAtt
 		rcsEnabled = False
@@ -94,52 +99,53 @@ PART
 		enableRoll = true
 		enablePitch = true
 		enableYaw = true
+		//1.25:1 MR based on fuel loading
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5511
+			ratio = 0.5657
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4489
+			ratio = 0.4343
 		}
 		PROPELLANT
 		{
-			name = Helium
-			ratio = 10.0
+			name = Nitrogen
+			ratio = 13.65
 			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
 			key = 0 283
-			key = 1 100
+			key = 1 75
 		}
 	}
 
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 34.5
-		type = ServiceModule
-		basemass = -1
-		TANK
+		volume = 34.6
+		type = SM-III
+		basemass = 0.12334
+		TANK	//14.52 kg MMH
 		{
 			name = MMH
-			amount = 18.072
-			maxAmount = 18.072
+			amount = 16.50
+			maxAmount = 16.50
 		}
-		TANK
+		TANK	//18.14 kg NTO
 		{
 			name = NTO
-			amount = 14.721
-			maxAmount = 14.721
+			amount = 12.66
+			maxAmount = 12.66
 		}
-		TANK
+		TANK	//1.36 kg N2
 		{
-			name = Helium
-			amount = 330
-			maxAmount = 330
+			name = Nitrogen
+			amount = 1087
+			maxAmount = 1087
 		}
 	}
 
@@ -165,12 +171,4 @@ PART
 			}
 		}
 	}
-}
-
-//	================================================================================
-//	Override RO global settings to get our temperatures back
-//	================================================================================
-@PART[ROC-ReentryControlSystemBDB]:AFTER[RealismOverhaul]
-{
-	@skinMaxTemp = 1273
 }
