--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetro.cfg
@@ -27,17 +27,17 @@ PART
 	//node_stack_bottom = 0.0, -0.20442, 0.0, 0.0, -1.0, 0.0, 0
 	node_attach = 0.0, 0.0, -0.116, 0.0, 0.0, 1.0, 0
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 54
 	category = Engine
 	subcategory = 0
-	title = Star-13E Gemini Retro Rocket
-	manufacturer = Thiokol
-	description = Gemini retro solid derived from the Star 13 orbit insertion motor. Place in 4x symmetry in the gaps of the retro module cruciform.
+	title = #roGeminiRetroBDBTitle	//Gemini Retro Rocket (Star-13E)
+	manufacturer = #roMfrThiokol
+	description = #roGeminiRetroBDBDesc
 
 	attachRules = 1,1,1,1,0
-	mass = 0.0043
+	mass = 0.00647
 	heatConductivity = 0.06 // 1/2 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...'
@@ -78,7 +78,7 @@ PART
 		type = ModuleEngines
 		configuration = Star-13E
 		modded = false
-		origMass = 0.0043
+		origMass = 0.00647
 
 		CONFIG
 		{
@@ -129,10 +129,11 @@ PART
 		}
 	}
 
+	//55.62 lbs (25.23 kg) propellant
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 13.8512
+		volume = 14.25
 		type = CTPB
 		basemass = -1
 	}
