--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
@@ -48,16 +48,16 @@ PART
 		method = FIXED_JOINT
 	}
 
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 615
 	category = Coupling
 	subcategory = 0
-	title = Gemini Adapter Retrograde Section
-	manufacturer = McDonnell Aircraft
-	description = This hollow structural adapter is designed to sit on top of the Gemini equipment section and house a quad of retro motors for reentry. Houses six translational control thrusters.
+	title = #roGeminiRetrogradeSectionBDBTitle	//Gemini Retrograde Section
+	manufacturer = #roMfrMcDonnell
+	description = #roGeminiRetrogradeSectionBDBDesc
 	attachRules = 1,0,1,1,0
-	mass = 0.4158
+	mass = 0.12349
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -133,12 +133,16 @@ PART
 		}
 	}
 
+	//source: http://rocketrelics.org/liquid_propulsion.html
+	//source: http://geminiguide.com/propulsion.html
+	//4 SE-7-100 thrusters for translation
+	//2 SE-7-85 thrusters for aft thrust
 	MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsTransform
-		thrusterPower = 0.4448222 // 100 lb
+		thrusterPower = 0.440374 // 99 lbf
 		resourceFlowMode = STACK_PRIORITY_SEARCH
 		runningEffectName = rcsTranslate
 		rcsEnabled = true
@@ -148,35 +152,37 @@ PART
 		enableRoll = false
 		enablePitch = false
 		enableYaw = false
+		//1.223 MR based on fuel load
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5511
+			ratio = 0.5711
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4489
+			ratio = 0.4289
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 13.65
 			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
-			key = 0 273
-			key = 1 100
+			key = 0 296
+			key = 1 1
 		}
 	}
 
+	//two SE-7-85 thrusters, for aft thrust
 	MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = retroTransform
-		thrusterPower = 0.4448222 // 100 lb (0.38 85 lb??)
+		thrusterPower = 0.369202 // 83 lbf
 		resourceFlowMode = STACK_PRIORITY_SEARCH
 		runningEffectName = rcsRetro
 		rcsEnabled = true
@@ -186,26 +192,27 @@ PART
 		enableRoll = false
 		enablePitch = false
 		enableYaw = false
+		//1.223 MR based on fuel load
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5511
+			ratio = 0.5711
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4489
+			ratio = 0.4289
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 13.65
 			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
-			key = 0 273
-			key = 1 100
+			key = 0 295
+			key = 1 1
 		}
 	}
 
