--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
@@ -7,6 +7,192 @@ PART
 
 	RSSROConfig = True
 
+	//	================================================================================
+	//Source for all Gemini Masses: http://www.alternatewars.com/BBOW/Space/JSC-26098_Design_Mass_Properties_II.pdf
+	//	================================================================================
+	//Gemini Service Module Dry Mass Breakdowns:
+	//	================================================================================
+	//Equipment Section: 1501.02 lbs
+	//	Structure: 277.98 lbs
+	//		Equipment Section Skin: 35.01 lbs
+	//		Panels/Radiators, Equipment: 46.32 lbs
+	//		Rings, Stiffening: 62.92 lbs
+	//		Adapter to Booster Splice Ring: 21.7 lbs
+	//		Booster to Adapter: 18.26 lbs
+	//		Doors, Equip Access: 27.42 lbs
+	//		Miscl Struct Details: 4.58 lbs
+	//		Equipment Supports: 20.0 lbs
+	//		Paint: 36.56 lbs
+	//		Attaching Hardware: 5.24 lbs
+	//	Propulsion: 309.02 lbs
+	//		Thrusters: 32.85 lbs	(4/12 = 1/3 mass. Shared with Equipment Section and OAMS)
+	//		Thrusters Mounting: 16.44 lbs	(1/3 mass. Shared with Equipment Section and OAMS)
+	//		(assuming each SE-7-100, SE-7-85, and pair of SE-7-25 has the same mass)
+	//		Pressure Tank: 37.12 lbs
+	//		Pressure Valving: 15.04 lbs
+	//		Oxidizer Tanks: 18.48 lbs
+	//		Oxidizer Valves: 2.25 lbs
+	//		Fuel Tanks: 21.26 lbs
+	//		Fuel Valves: 2.23 lbs
+	//		Shutoff Valves: 7.24 lbs
+	//		Propel Quantity System: 21.06 lbs
+	//		Circuitry: 23.08 lbs
+	//		OAMS Electronics: 7.4 lbs
+	//		Blast Shield: 28.99 lbs
+	//		Cross Beam: 14.73 lbs
+	//		Mounting & Installation: 60.85 lbs
+	//	Power: 471.51 lbs
+	//		Battery: 351.93 lbs
+	//		Fuel Cell: 0.74 lbs
+	//		Power Circuitry: 31.02 lbs
+	//		Adapter Separation Circuitry: 16.06 lbs
+	//		Booster Separation Circuitry: 4.20 lbs
+	//		Exterior Lights: 1.82 lbs
+	//		Blast Shield: 25.11 lbs
+	//		Cross Beam Assembly: 20.08 lbs
+	//		Details: 20.55 lbs
+	//	Avionics: 137.19 lbs
+	//		HF Voice: 7.3 lbs
+	//		C Band Beacon: 10.66 lbs
+	//		Acquisition Aid Transmitter: 1.02 lbs
+	//		Multiplexing/Switching: 0.46 lbs
+	//		Mounting: 2.62 lbs
+	//		Circuitry: 7.12 lbs
+	//		Transmitter: 2.52 lbs
+	//		Multiplexing/Switching: 6.97 lbs
+	//		Command System: 21.97 lbs
+	//		Instrumentation Packages: 4.38 lbs
+	//		Sensors: 4.04 lbs
+	//		Blast Shield: 14.88 lbs
+	//		Structural Mounting: 13.55 lbs
+	//		Circuitry: 39.7 lbs
+	//	Enviroment: 305.32 lbs
+	//		Pressure Breathing Bottle: 42.19 lbs
+	//		Pressure Breathing Valving: 2.79 lbs
+	//		Press Breathing Lines/Ducting: 5.85 lbs
+	//		Heat Exchangers: 34.6 lbs
+	//		Cooling Fluid: 38.36 lbs
+	//		Launch Coolant Water: 7.0 lbs
+	//		Pumps: 49.22 lbs
+	//		Cold Plates: 14.6 lbs
+	//		Lines And Clamps: 22.47 lbs
+	//		Valving: 10.26 lbs
+	//		Coolant Reservior: 12.34 lbs
+	//		Installation Details: 2.91 lbs
+	//		Blast Shield: 16.39 lbs
+	//		Circuitry: 13.63 lbs
+	//		Structural Mounting: 17.34 lbs
+	//		Water Tank (Crew): 7.29 lbs
+	//		Water Management System: 6.07 lbs
+	//		EVA Structural Provisions: 2.01 lbs
+	//	================================================================================
+	//Adapter Retrograde Section: 272.24 lbs
+	//	Structure: 98.63 lbs
+	//		Retro Section Skin: 18.68 lbs
+	//		Panels/Radiators, Retro: 29.13 lbs
+	//		Retro to Equipment Section Splice Ring: 14.17 lbs
+	//		Retro to Equip Section: 19.60 lbs
+	//		Fairings: 17.05 lbs
+	//	TPS: 10.8 lbs
+	//		Thermal Curtain: 10.8 lbs
+	//	Propulsion: 73.95 lbs
+	//		Thrusters: 49.28 lbs	(6/12 = 1/2 mass. Shared with Equipment Section and OAMS)
+	//		Thrusters Mounting: 24.67 lbs	(1/2 mass. Shared with Equipment Section and OAMS)
+	//	Other: 88.86 lbs
+	//		Truss: 27.89 lbs
+	//		Circuitry: 11.67 lbs
+	//		Blast Shield: 28.81 lbs
+	//		Miscl Attachments: 3.85 lbs
+	//		Shrapnel Protection: 13.25 lbs
+	//		Actual Wt Adjustment: 3.39 lbs
+	//	================================================================================
+	//Retrograde Section Decoupler: 30.02 lbs
+	//	Structure: 30.02 lbs
+	//		Reentry Module to Adapter Splice Ring: 6.96 lbs
+	//		Reentry Module to Adapter: 21.05 lbs
+	//		Spring Cartridge: 2.01 lbs
+	//	================================================================================
+	//UHF Antenna: 0.8 lbs
+	//	Avionics: 0.8 lbs
+	//		UHF Extendable Antenna: 0.8 lbs
+	//	================================================================================
+	//Star-13E: 279.53 lbs (divided over 4 motors)
+	//	Other: 279.53 lbs
+	//		Case: 43.84 lbs
+	//		Propellant: 222.48 lbs
+	//		Ignitors: 3.28 lbs
+	//		Attach Fittings: 9.93 lbs
+	//	================================================================================
+	//Orbit Attitude and Maneuvering System: 24.65 lbs (divided over two OAMS units)
+	//	Propulsion: 24.65 lbs
+	//		Thrusters: 16.43 lbs	(2/12 = 1/6 mass. Shared with Equipment Section and OAMS)
+	//		Thrusters Mounting: 8.22 lbs	(1/6 mass. Shared with Equipment Section and OAMS)
+	//	================================================================================
+	//TOTAL DRY MASS: 2108.26 lbs
+	//	Structure: 406.63 lbs
+	//	TPS: 10.8 lbs
+	//	Propulsion: 407.62 lbs
+	//	Power: 471.51 lbs
+	//	Avionics: 137.99 lbs
+	//	Environmental: 305.32 lbs
+	//	Other: 368.39 lbs
+
+	//	================================================================================
+	//Gemini Service Module Inert Mass Breakdowns:
+	//	================================================================================
+	//Equipment Section: 0.0 lbs
+	//	Cargo: 0.0 lbs
+	//		Experiments: 12.0 lbs (not incl.)
+	//INERT MASS: 0.0 lbs
+
+	//TOTAL INERT MASS: 2108.26 lbs
+
+	//	================================================================================
+	//Gemini Service Module Wet Mass Breakdowns:
+	//	================================================================================
+	//Equipment Section: 777 lbs
+	//	Non-Propellant: 84.0 lbs
+	//		Water (Crew-Primary): 30.0 lbs
+	//		Oxygen (Crew-Primary): 54.0 lbs
+	//	Propellant: 693.0 lbs
+	//		Helium Gas (OAMS): 4.0 lbs
+	//		OAMS Fuel: 310.0 lbs
+	//		OAMS Oxidizer: 379.0 lbs
+
+	//GROSS MASS: 2885.26 lbs
+	//ALL INCLUDED GROSS MASS: 2897.26 lbs
+
+	//	================================================================================
+	//Ultimate Part Mass Assignments:
+	//	================================================================================
+	//	Equipment Section: 1501.02 lbs (680.85 kg)
+	//		Dry Mass: 1501.02 lbs
+	//	================================================================================
+	//	Adapter Retrograde Section: 272.24 lbs (123.49 kg)
+	//		Dry Mass: 272.24 lbs
+	//	================================================================================
+	//	Retrograde Section Decoupler: 30.02 lbs (13.62 kg)
+	//		Dry Mass: 190.86 lbs
+	//	================================================================================
+	//	UHF Antenna: 0.8 lbs (0.36 kg)
+	//		Dry Mass: 0.8 lbs
+	//	================================================================================
+	//	Star-13E: 14.26 lbs (6.47 kg) (x4, plus 222.48 lbs propellant)
+	//		Dry Mass: 14.26 lbs
+	//	================================================================================
+	//	Orbit Attitude and Maneuvering System: 12.32 lbs (5.59 kg)
+	//		Dry Mass: 12.32 lbs
+	//	================================================================================
+	//INERT MASS: 2108.24 (956.28 kg)
+
+	//	================================================================================
+	//Tank Mass Compensation
+	//	================================================================================
+	//	OAMS Propellant Tank (SM-III): 48.3 kg
+	//	LS Tank (SM-III): 52.5 kg
+	//	LqdOxygen Tank (SM-III): 3.0 kg (reference Gemini had no fuel cells, and therefore no fuel cell fuel tanks installed, just crew oxygen tank)
+	//	Equipment Section Batteries (SM-III): 159.63 kg
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Gemini/bluedog_Gemini_EquipmentModule
@@ -55,15 +241,15 @@ PART
 	sound_decoupler_fire = decouple
 
 	attachRules = 1,0,1,1,0
-	TechRequired = flightControl
+	TechRequired = unlockParts
 	entryCost = 0
 	cost = 1245
 	category = Propulsion
 	subcategory = 0
-	title = Gemini Equipment Section
-	manufacturer = McDonnell Aircraft
-	description = The Gemini Adapter Equipment Section. It contains O2 and H2 for fuel cell consumption and life support. It also contains fuel for manoeuvring and attitude control thrusters. This is the configuration as found on Gemini 10+. RCS O/F Ratio 1.3:1.
-	mass = 0.367
+	title = #rocGeminiEquipmentSectionBDBTitle	//Gemini Equipment Section
+	manufacturer = #roMfrMcDonnell
+	description = #rocGeminiEquipmentSectionBDBDesc
+	mass = 0.39942	//680.85 kg - 18 kg (UHF Antenna) - 48.3 kg (OAMS Propellant Tank) - 159.63 kg (Battery) - 52.5 kg (LS Tank) - 3 kg (LOX tank)
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.20
@@ -124,12 +310,15 @@ PART
 		menuName = Jettison
 	}
 
+	//8 Rocketdyne SE-7-25 thrusters for attitude control
+	//source: http://rocketrelics.org/liquid_propulsion.html
+	//source: https://articles.adsabs.harvard.edu//full/1976NASSP8120....../0000005.000.html
 	MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsTransform
-		thrusterPower = 0.11 // 25 lb
+		thrusterPower = 0.1045 // 23.5 lb
 		resourceFlowMode = STACK_PRIORITY_SEARCH
 		runningEffectName = rcsAtt
 		rcsEnabled = True
@@ -139,58 +328,61 @@ PART
 		enableRoll = true
 		enablePitch = true
 		enableYaw = true
+		//1.223 MR based on fuel load
 		PROPELLANT
 		{
 			name = MMH
-			ratio = 0.5511
+			ratio = 0.5711
 		}
 		PROPELLANT
 		{
 			name = NTO
-			ratio = 0.4489
+			ratio = 0.4289
 		}
 		PROPELLANT
 		{
 			name = Helium
-			ratio = 10.0
+			ratio = 13.65
 			ignoreForIsp = true
 		}
 		atmosphereCurve
 		{
-			key = 0 273
-			key = 1 100
+			key = 0 258
+			key = 1 1
 		}
 	}
 
+	//source for fuel cells: http://geminiguide.com/Systems/electrical.html
 	MODULE
 	{
 		name = ModuleFuelTanks
 		volume = 2851
-		type = ServiceModule
-		basemass = -1
+		type = SM-III
+		basemass = 0.39942
 		TANK
 		{
 			name = LqdHydrogen
-			amount = 850
-			maxAmount = 850
+			amount = 142.4	//22.25 lbs (10.09 kg) max load
+			maxAmount = 142.4
 		}
 		TANK
 		{
 			name = LqdOxygen
-			amount = 365
-			maxAmount = 365
+			amount = 81.89	//106 lbs oxygen for fuel cells, 54 lbs for ECS, 46 lbs auxiliary? Tanks could crossfeed (at least in later Geminis). 93.44 kg
+			maxAmount = 81.89
 		}
+		//Gemini could carry up to 3 fuel-ox tank pairs. Reference config carried two (probably), so increase fuel load by 150%.
 		TANK
 		{
 			name = MMH
-			amount = 239.467
-			maxAmount = 239.467
+			amount = 159.78	//310 lbs (140.61 kg) Fuel
+			maxAmount = 239.67	// * 1.5 for third fuel tank
 		}
 		TANK
 		{
 			name = NTO
-			amount = 195.071
-			maxAmount = 195.071
+			amount = 119.97	//379 lbs (171.91 kg) Oxidizer
+			maxAmount = 179.96	// * 1.5 for third fuel tank
 		}
 		TANK
 		{
@@ -201,8 +393,8 @@ PART
 		TANK
 		{
 			name = Water
-			amount = 101
-			maxAmount = 101
+			amount = 30.7	//30 lbs (13.61 kg) water. Add more to last 14 days
+			maxAmount = 30.7
 		}
 		TANK
 		{
@@ -219,8 +411,8 @@ PART
 		TANK
 		{
 			name = ElectricCharge
-			amount = 552096
-			maxAmount = 762048
+			amount = 88650	//adding batteries based on mass (351.93 lbs/159.63 kg)
+			maxAmount = 88650
 		}
 	}
 
