--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNosecone.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNosecone.cfg
@@ -27,15 +27,15 @@ PART
 	}
 
 	attachRules = 1,0,1,1,0
-	TechRequired = generalConstruction
+	TechRequired = unlockParts
 	entryCost = 750
 	cost = 210
 	category = Coupling
 	subcategory = 0
-	title = Gemini Nose Docking Mechanism
-	manufacturer = McDonnell Aircraft
-	description = One of the most crucial skills that the Gemini program is meant to develop is the ability to rendevous and dock in space. This simple docking mechanism doesn't have the ability to transfer crew or resources, but it will allow you to connect two vessels in flight. This male active docking mechanism corresponds to the female Agena Docking Adapter. It include an indexing key, that slides into the V shape on the Agena Docking Adapter, to help line the two craft up properly. //'
-	mass = 0.077
+	title = #rocGeminiNoseconeBDBTitle	//Gemini Nose Docking Mechanism
+	manufacturer = #roMfrMcDonnell
+	description = #rocGeminiNoseconeBDBDesc
+	mass = 0.13420
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.2
@@ -50,9 +50,10 @@ PART
 	bulkheadProfiles = size00, size0
 
 	//Thermal Stuff
-	//Fiberglass over titanium frame
-	skinTempTag = Fiberglass
+	//Titanium structure with Beryllium shingles. Tiles isloated from structure with spacers, and had gold coating on inside to minimize radiation.
+	skinTempTag = Beryllium
 	internalTempTag = Instruments
+	skinInsulationTag = True
 
 	tags = gemini dock docking port gatv agena target
 
@@ -128,12 +129,4 @@ PART
 			}
 		}
 	}
-}
-
-//	================================================================================
-//	Override RO global settings to get our temperatures back
-//	================================================================================
-@PART[ROC-GeminiNoseconeBDB]:AFTER[RealismOverhaul]
-{
-	@skinMaxTemp = 1273
 }
