--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeDecoupler.cfg
@@ -22,16 +22,16 @@ PART
 	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_vent_large = decouple
 
-	TechRequired = generalConstruction
+	TechRequired = unlockParts
 	entryCost = 1800
 	cost = 450
 	category = Coupling
 	subcategory = 0
-	title = Gemini Retrograde Section Decoupler
-	manufacturer = McDonnell Aircraft
-	description = Low profile decoupler for separating the Gemini capsule from the Adapter Retrograde Section.
+	title = #roRetrogradeDecouplerBDBTitle	//Gemini Retrograde Section Decoupler
+	manufacturer = #roMfrMcDonnell
+	description = #roRetrogradeDecouplerBDBDesc
 	attachRules = 1,0,1,1,0
-	mass = 0.058
+	mass = 0.01362
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
